// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabStack /> should re-render correctly when "goBack" action is called 1`] = `
<Text>
  Goodbye
</Text>
`;

exports[`<TabStack /> should re-render correctly when "goBack" action is called 2`] = `
<Text>
  Hello
</Text>
`;

exports[`<TabStack /> should re-render correctly when "push" action is called 1`] = `
<Text>
  Index
</Text>
`;

exports[`<TabStack /> should re-render correctly when "push" action is called 2`] = `
<Text>
  Hello
</Text>
`;

exports[`<TabStack /> should re-render correctly when "replace" action is called 1`] = `
<Text>
  Index
</Text>
`;

exports[`<TabStack /> should re-render correctly when "replace" action is called 2`] = `
<Text>
  Hello
</Text>
`;

exports[`<TabStack /> should render correctly 1`] = `
<Text>
  Index
</Text>
`;

exports[`<TabStack /> should render correctly with initialIndex and initialEntries props  1`] = `
<Text>
  Hello
</Text>
`;
